# bcToDot-llvm

./: .gitignore  CMakeLists.txt  Makefile  README.md  run.sh  teste.dot
benchmarks/Bubblesort/IR/: Bubblesort.bc  Bubblesort.ll
benchmarks/Bubblesort/dot/: Bubble.dot  bInitarr.dot  main.dot  printf.dot
benchmarks/FloatMM/: FloatMM.ll
benchmarks/FloatMM/IR/: FloatMM.bc
benchmarks/FloatMM/dot/: Mm.dot  llvm.fmuladd.f32.dot  main.dot  printf.dot  rInitmatrix.dot  rInnerproduct.dot
benchmarks/IR/: Oscar.ll  Puzzle.ll  RealMM.ll
benchmarks/IntMM/IR/: IntMM.bc  IntMM.ll
benchmarks/IntMM/dot/: Initmatrix.dot  Innerproduct.dot  Intmm.dot  main.dot  printf.dot
benchmarks/Oscar/IR/: Oscar.bc
benchmarks/Oscar/dot/: Cos.dot  Exptab.dot  Fft.dot  Min0.dot  Oscar.dot  Printcomplex.dot  Uniform11.dot  llvm.fmuladd.f32.dot  llvm.memcpy.p0.p0.i64.dot  main.dot  printf.dot
benchmarks/Perm/: Perm.ll
benchmarks/Perm/IR/: Perm.bc
benchmarks/Perm/dot/: Initialize.dot  Perm.dot  Permute.dot  Swap.dot  main.dot  printf.dot
benchmarks/Puzzle/IR/: Puzzle.bc
benchmarks/Puzzle/dot/: Fit.dot  Place.dot  Puzzle.dot  Remove.dot  Trial.dot  main.dot  printf.dot
benchmarks/Queens/IR/: Queens.bc  Queens.ll
benchmarks/Queens/dot/: Doit.dot  Queens.dot  Try.dot  main.dot  printf.dot
benchmarks/Quicksort/: Quicksort.ll
benchmarks/Quicksort/IR/: Quicksort.bc
benchmarks/Treesort/: Treesort.ll
examples/: 2.ll  test.bc
include/: CFGPrinter.hpp  CFGPrinterBC.hpp
lib/: CFGPrinter.cpp  CFGPrinterBC.cpp  CFGPrinterBCPlugin.cpp  CMakeLists.txt
(+37 files in other folders)
